--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 
 <head>
+	<script src="./assets/script.js" defer></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Print it ! - Impressions d'entreprise</title>
@@ -148,8 +149,6 @@
 			<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 		</div>
 	</footer>
-
-<script src="./assets/script.js"></script>
 
 </body>
 
