--- a/index.html
+++ b/index.html
@@ -24,28 +24,11 @@
 
 	<main>
 		<div id="banner">
+			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 			<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="left arrow">
 			<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="right arrow">
 			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-			<ul class="carrousel">
-				<li class="slide">
-					<img src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-				</li>
-				<li class="slide">
-					<img src="./assets/images/slideshow/slide2.jpg" alt="Banner Print-it">
-				</li>
-				<li class="slide">
-					<img src="./assets/images/slideshow/slide3.jpg" alt="Banner Print-it">
-				</li>
-				<li class="slide">
-					<img src="./assets/images/slideshow/slide4.jpg" alt="Banner Print-it">
-				</li>
-			</ul>
 			<div class="dots">
-				<button class="dot"></button>
-				<button class="dot"></button>
-				<button class="dot"></button>
-				<button class="dot"></button>
 			</div>
 		</div>
 		<section id="about-us" class="container">
